--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <article class="card">
 <img class="pfp" src="images/joel.jpg" alt="Joel">
 <h3>Joel</h3>
-<p>Hostage, Hotsauce whore, profoundly r-worded. Motherboy 3. New to OSRS</p>
+<p>Hostage, Hotsauce whore, profoundly r-worded. "Motherboy 3". New to OSRS</p>
 </article>
 
 <article class="card">
@@ -125,3 +125,4 @@ document.getElementById('y').textContent = new Date().getFullYear();
 </script>
 </body>
 </html>
+
