--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <div class="thumb-grid">
 <a class="thumb" href="https://www.youtube.com/watch?v=VIDEO_ID_1" target="_blank" rel="noopener">
 <div class="thumb-placeholder"></div>
-<span>Ep 1 — KoKRing and Fishnets</span>
+<span>Ep 1 — KoKRing and Fishnets(coming soon)</span>
 </a>
 <a class="thumb" href="https://www.youtube.com/watch?v=VIDEO_ID_2" target="_blank" rel="noopener">
 <div class="thumb-placeholder"></div>
@@ -125,4 +125,5 @@ document.getElementById('y').textContent = new Date().getFullYear();
 </script>
 </body>
 </html>
+
 
